--- a/style.css
+++ b/style.css
@@ -221,4 +221,7 @@ footer {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    flex-shrink: 0;     /* ← CLAVE PARA QUE SE MUEVA */
 }
+
+
